@@ -1,4 +1,5 @@
 - Changed default additional CSS to avoid interaction with default classes.
+- Fixed problem with no visible slots on Weekly Calendar view.
 
 2017-11-21 - 2.2.3
 -------------------------------
